# TelegramVideoSaver

./: .gitignore  1_install.bat  2_run.bat  README.md  index.html  install.ps1  package-lock.json  package.json  run.ps1  vite.config.ts
.github/workflows/: build-windows.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  telegram.rs
